--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
       uses: docker/build-push-action@v3.2.0
       with: 
         file: ./Dockerfile
-        tags: hiteshdutt/sptag:${{ github.run_id }}
+        tags: sriharshaputta/sptag:${{ github.run_id }}
         push: true
