--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,9 @@ jobs:
         file: ./Dockerfile
         tags: sriharshaputta/sptag:${{ github.run_id }}
         push: true
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v3
+      with:
+        name: my-artifact
+        path: my_file.txt
+        retention-days: 7
