--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,5 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
+        path: |
         retention-days: 7
